DE4939 Active Nav Items / Dark Theme Ensure active nav items are visible when viewing DDK through the dark-theme lens.

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -10,6 +10,9 @@
 
   a.active {
     color: $cr-black;
+    .dark-theme & {
+      color: $cr-white;
+    }
   }
 }
 
